# ChangeLog for dev-db/tora
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/tora/ChangeLog,v 1.103 2013/11/09 16:15:40 pacho Exp $

  09 Nov 2013; Pacho Ramos <pacho@gentoo.org> tora-2.1.3-r2.ebuild:
  x86 stable, bug #477176

*tora-2.1.3-r3 (30 Oct 2013)

  30 Oct 2013; Michael Haubenwallner <haubi@gentoo.org> +tora-2.1.3-r3.ebuild,
  +files/tora-2.1.3-desktop.patch:
  Fix tora.desktop file to pass validation, bug#484198.
  Bump EAPI 3.

  25 Sep 2013; Agostino Sarubbo <ago@gentoo.org> tora-2.1.3-r2.ebuild:
  Stable for ppc, wrt bug #477176

  08 Sep 2013; Agostino Sarubbo <ago@gentoo.org> tora-2.1.3-r2.ebuild:
  Stable for amd64, wrt bug #477176

  08 Mar 2013; Michael Haubenwallner <haubi@gentoo.org> tora-9999.ebuild:
  Need to copy the .svn directory for 'svn info' (bug#455498).

  02 Mar 2013; Markos Chandras <hwoarang@gentoo.org> tora-2.1.1.ebuild,
  tora-2.1.3-r1.ebuild, tora-2.1.3-r2.ebuild, tora-9999.ebuild:
  Move Qt dependencies to the new category

*tora-9999 (06 Feb 2013)

  06 Feb 2013; Michael Haubenwallner <haubi@gentoo.org> +tora-9999.ebuild,
  +files/tora-9999-ext-loki.patch:
  Add tora live-svn ebuild, for bug#455498.

  30 Sep 2012; Raúl Porcel <armin76@gentoo.org> tora-2.1.1.ebuild,
  tora-2.1.3-r1.ebuild:
  Drop alpha/sparc keywords

*tora-2.1.3-r2 (25 Sep 2012)

  25 Sep 2012; Michael Haubenwallner <haubi@gentoo.org> +tora-2.1.3-r2.ebuild,
  +files/tora-2.1.3-ext-loki.patch:
  Use dev-libs/ferrisloki instead of bundled one, bug#383109.

  24 Sep 2012; Michael Haubenwallner <haubi@gentoo.org> tora-2.1.3-r1.ebuild,
  +files/tora-2.1.3-gcc-4.7.patch:
  Fix compilation with gcc-4.7, bug#430044.

  09 Feb 2012; Michael Haubenwallner <haubi@gentoo.org> metadata.xml:
  Taking over maintainership.

  09 Feb 2012; Pacho Ramos <pacho@gentoo.org> -tora-2.1.3.ebuild, metadata.xml:
  Drop maintainer due retirement, bug #85926

*tora-2.1.3-r1 (10 Dec 2011)
