@@ -9,16 +9,15 @@ AUX tora-9999-ext-loki.patch 2816 SHA256 b495a4ee801614fccf41200fc46fece4cc18240
 DIST tora-2.1.1.tar.gz 5356473 SHA256 5063f2adda7c14ecdbc190b1459b3ea236fb37054640635f54bc2d46a5041663 SHA512 57c431e802a3e6abd29dc8db0fd7eeeb7a98fe4c923ebb72469e5e1887f05dd8ffab069a9d8df57455b6be7abba7806cdc447b0333a42b898d7072038eb7865b WHIRLPOOL 4cd86a1499057ab919cd87dd8a80d5969cd9eb70832938d28a35419ecca0061e7b61ef3bda32ac88b04738a8c3ad28de083d9ecf85017afd5a97e9a0da480a11
 DIST tora-2.1.3.tar.gz 12284451 SHA256 ecabb2f181d1fefe8c1c401f14e1fea80b49fc6bc7963ef9f202821a626e619b SHA512 817de0eed05dcc89baf5dbf51d88577cf21b809435d76eef76bfc5ad9e5b5c8228c5cf0ac41d126144e3b41feb73fba04e62af7564fde2a11e9c81c62be59329 WHIRLPOOL aa81539e5218acd284c0bd44787220f3926734bd8c91fa7b3ddb86de6a6a50c7a8036f4bf6b5a89f246c52ff9d45533da108db9a7b1a5f5a162f20c87d5953d4
 EBUILD tora-2.1.1.ebuild 1811 SHA256 d9adf36e3bfdc1ccda51d84cdfe53419d643a7b696cb0fff8e91de4ee7c29422 SHA512 cd0cc6d5a6f000d746857fabcee10cfb38154168213cf8769595a4881f4700ab1df2eb70f8c348331aa018d67b4d6c71850876a0ca7762fd5a79f2d80e3bcbcb WHIRLPOOL 166b464f4d4cf53706477bba330587fb2e5e10f24f3579d28ccdbdedadad1cf654cae97d3d98e6462af1809e7b47472571bf69f50aa7caed83868e74a7eb8f38
-EBUILD tora-2.1.3-r1.ebuild 1934 SHA256 2b49f409dda6d11478344d68fa0e678283cae9927971c8f6b10e388d206874db SHA512 ffb98464ddca2d70242504b6fe98b98b0f21c0c3aff1498593875f49894fede635ef761da011a4add483421df6da9dc0db2b3cc889206e04f955dea48721655d WHIRLPOOL 3cc2d3d307bdf23cb6e38364847c8af9570a21cce26a06fafb00b92f3a78f1eacfaa2c52d8c2a2eced403236984020aab93c7d0bbd3b0e070500889c264d98ef
 EBUILD tora-2.1.3-r2.ebuild 2026 SHA256 7f9907879430c1eaccc5f2a4475ce197943b114fef9a7cb0ca5ddbdaf9c5df4a SHA512 f6224ed6f2abb8b7dc4aca3224469325864d670094119a593db8af73b0c96870bd7226614d5a598866d46d4c81534eb50dc53055e434853bc3c449e73ce64942 WHIRLPOOL bbc1f15db19f63aaa736402af70906e84a828785bef3f98a7c7f75559615586dbd83e408c60e4e1367605c6d69ca8ccb95634f9bb9c8b0a3dc9601e07bbcea87
 EBUILD tora-2.1.3-r3.ebuild 2078 SHA256 456d87ae4379d3eda843a0f4981ac54beab997d3917f68053a1b1c9824304d0c SHA512 1d0d43c094be623a1cb66f70574ddc7be056230ec3b1b00ab2cfe602b6b96852807cf53cb21f42e44485b9728efc207595708aec5cd122848a0d0085e186df3e WHIRLPOOL 975bfb5516c9a29f74590738e22025694a26375ef47cd25f8346a2d0cc1d1fabd79038911676f32b389bdf7ff4d0d434e0a654c3e6424c5550aedfd678e3c61f
 EBUILD tora-9999.ebuild 2217 SHA256 d347eef217cfc4754a159d278f4bbf1d1bdcd21a03f96e833507104f5dc1b4b5 SHA512 ac432bddeeaef4cdc8f7fbad81b951480cb674f5a444acbb75b2d366ecb3599ac9d6e67514396b315108eb16be95d44096cddd226800e9ce8c55807a7fd5e5ca WHIRLPOOL 7498b4049de969aa3931653ec1efdf33e65657ba6efcb8472d670c460f08c7513baa7cc5c180a53c1d2ff374567393783f3d7800f0d98efa69c1670f1ec750b3
-MISC ChangeLog 15303 SHA256 9dab5a88505c87e554f09abc1fb9c02a427e10771faad7e2a4ab8e9e0872c489 SHA512 66202654336ed95e375c2f4b78608b800f4e6c7248eac508cdbaae5656ff5ee217cdf6accdf649b656bc28a20282208537db6d37198d91c83f324f6c3bcfea21 WHIRLPOOL 7d6fd9d668a970373b34b405e0592938ab1a42adb4734a912616472537a43e60e49a91ba5793531558fbf38f90ec49e6c71e5214e7d54cd77aa5e3ce3a73a556
+MISC ChangeLog 15406 SHA256 fc941ebf731e30322293af344d7228847d9727e5c2f510b8e0f9cc023878bf3e SHA512 ffa6e274c6760f5f8d772254d125edcdb1a7bdf3f006f687d894f96efdab20630e3bf0f596c5f59df44226a89119f6583d414948dfb8220d1b1efb0935744c38 WHIRLPOOL ab4eec85fcc226a54f07a0c772f62917e21c04dc7f3c5015380b8216434a302b69f04af998a59f30d563fc90a7631d67ece51506e0a681ae4e17d2cff037ab7c
 MISC metadata.xml 488 SHA256 928af37742c0b69bdfa30d41ed060502fce397e7e80f8278aa7ce9597306297c SHA512 e92e0d2b2d79ba69f8c6a094b6b2b034a575ad91a2fba146ab271aee99b1a7550efe1e7f74f4e590febc9d9e0259ba59a6fd71af8a25f3a7862f9bb59009bc4e WHIRLPOOL 2e95444901b6ce260e5aef197f44b6988ca55fd8e2bc21ccc3020b711c1f60fd1926ad4e63bc522de8bfd2eda1d4c2801f37edd75f8ccbd167e765b665445427
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iEYEAREIAAYFAlJ+X64ACgkQCaWpQKGI+9TScACfQGYKrmHT7SYW9sqRDBnZUIGR
-uQ0AoIDvFoPyQ2EWl685oSLERsprLAQz
-=o4At
+iEYEAREIAAYFAlQagvIACgkQLc0TWKYwzLjNYwCffhOKI8Uvgdy/JEfzPT8kZ1+B
+xtEAn3hck+8f2IgmSc2MUnqfklx06Il3
+=2pdS
 -----END PGP SIGNATURE-----
