@@ -1,12 +1,0 @@
-DEFINED_PHASES=compile configure install prepare setup test
-DEPEND=x11-libs/qscintilla dev-qt/qtgui:4 dev-qt/qtsql:4[mysql?,postgres?] dev-qt/qtxmlpatterns:4 oci8-instant-client? ( dev-db/oracle-instantclient-basic dev-db/oracle-instantclient-sqlplus ) postgres? ( dev-db/postgresql-server ) sys-devel/make >=dev-util/cmake-2.8.12 userland_GNU? ( >=sys-apps/findutils-4.4.0 )
-DESCRIPTION=TOra - Toolkit For Oracle
-EAPI=2
-HOMEPAGE=http://tora.sourceforge.net
-IUSE=debug mysql oracle oci8-instant-client postgres
-KEYWORDS=~amd64 ~ppc ~x86
-LICENSE=GPL-2
-SLOT=0
-SRC_URI=mirror://sourceforge/tora/tora-2.1.3.tar.gz
-_eclasses_=cmake-utils	da2974fcb060ec927e93a17c835afa67	eutils	06133990e861be0fe60c2b428fd025d9	flag-o-matic	75e24bac8423c515dd9c5717f08feb83	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402
-_md5_=b5d7edb26b350a6a15f695e0d4bbf719
