@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.9388 2014/09/18 06:28:57 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.9389 2014/09/18 06:39:26 dilfridge Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  18 Sep 2014; Andreas K. Huettel <dilfridge@gentoo.org> package.mask:
+  Remove LO-4.3 mask
 
   18 Sep 2014; Ulrich Müller <ulm@gentoo.org> package.mask:
   Temporarily mask >=dev-libs/lib{ixion,orcus}-0.7, pending libreoffice update.
