@@ -1,6 +1,9 @@
 # ChangeLog for dev-db/tora
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/tora/ChangeLog,v 1.103 2013/11/09 16:15:40 pacho Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-db/tora/ChangeLog,v 1.104 2014/09/18 06:59:59 haubi Exp $
+
+  18 Sep 2014; Michael Haubenwallner <haubi@gentoo.org> -tora-2.1.3-r1.ebuild:
+  drop old, bug#523014
 
   09 Nov 2013; Pacho Ramos <pacho@gentoo.org> tora-2.1.3-r2.ebuild:
   x86 stable, bug #477176
